--- a/app/assets/stylesheets/pages/issuable.scss
+++ b/app/assets/stylesheets/pages/issuable.scss
@@ -51,7 +51,7 @@
   }
 
   section {
-    border-right: 1px solid #ECEEF1;
+    border-right: 1px solid $border-white-light;
 
     > .tab-content {
       margin-right: 1px;
